...

    public var displayName: String {
        switch self {
        case .detecting:
            "Detecting…"
        case .sdr:
            "SDR"
        case .hdr10:
            "HDR10"
        case .hlg:
            "HLG"
        case .dolbyVision:
            "Dolby Vision"
...
